[package]
name = "rape-wuwa"
version.workspace = true
edition.workspace = true
build = "build.rs"

[build-dependencies]
cc = "1.0"
embed-resource = "3.0.1"

[dependencies]
aes-key-finder = { path = "../aes-key-finder" }
pe-utils = { path = "../pe-utils" }
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
goblin = "0.9.3"
winconsole = "0.11"